--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "menu-app",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://pokator.github.io/cs378-p2/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
